<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/welcome_to_bmi_calculator"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <CheckBox
                android:id="@+id/radio_button_imperial"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:scaleX="0.8"
                android:scaleY="0.8"
                android:text="@string/imperial"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/enter_your_name" />

            <EditText
                android:id="@+id/edit_person_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="9dp"
                android:inputType="textCapSentences"
                android:hint="@string/name_hint" />

            <TextView
                android:id="@+id/text_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_height_cm" />

            <EditText
                android:id="@+id/edit_person_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="9dp"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/text_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_weight_kg" />

            <EditText
                android:id="@+id/edit_person_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_button_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female_radio_button" />

                <RadioButton
                    android:id="@+id/radio_button_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/male_radio_button" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_ok"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"
                    android:layout_weight="1"
                    android:text="@string/ok_button" />

                <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_weight="1"
                    android:text="@string/cancel_button"/>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>